# internal/dto/user-login-response.go
@@ -1,8 +1,9 @@
 package dto
 
 type UserLoginResponse struct {
-	Message   string `json:"message"`
-	NoTelepon string `json:"no_telepon"`
-	Username  string `json:"username"`
-	Name      string `json:"name"`
+	Message     string `json:"message"`
+	NoTelepon   string `json:"no_telepon"`
+	Username    string `json:"username"`
+	Name        string `json:"name"`
+	AccessToken string `json:"access_token"`
 }
